# Capstone2-Smart-Banking-Assistant

./: pyproject.toml  ui.py
src/api/v1/agents/: agent.py
src/api/v1/routes/: query.py
src/api/v1/schemas/: query_schema.py
src/api/v1/services/: query_service.py
src/api/v1/tools/: fts_search.py  hybrid_search.py  tools.py  vector_search.py
src/core/: db.py
src/ingestion/: docling_parser.py  ingestion.py
